--- a/index.html
+++ b/index.html
@@ -70,6 +70,22 @@
       <section class="about">
         <div class="container">
           <h2 class="visually-hidden">Ours skills</h2>
+          <div class="skills-icons">
+            <lu class="skills-list list">
+              <li class="skills-item"><a href="" class="skills-link link"><svg class="ours-icon" width="60px" hight="63px">
+              <use href="./img/icons.svg#icon-antenna"></use>
+              </svg></a></li>
+              <li class="skills-item"><a href="" class="skills-link link"><svg class="ours-icon" width="60px" hight="63px">
+                <use href="./img/icons.svg#icon-clock"></use>
+                </svg></a></li>
+                <li class="skills-item"><a href="" class="skills-link link"><svg class="ours-icon" width="60px" hight="63px">
+                  <use href="./img/icons.svg#icon-diagram"></use>
+                  </svg></a></li>
+                  <li class="skills-item"><a href="" class="skills-link link"><svg class="ours-icon" width="60px" hight="63px">
+                    <use href="./img/icons.svg#icon-astronaut"></use>
+                    </svg></a></li>
+            </lu>
+          </div>
           <ul class="about-list list">
             <li class="about-item">
               <h3 class="about-title">Strategy</h3>
@@ -321,7 +337,8 @@
     </section>
 
     <footer class="footer">
-      <div class="footer-text container">
+    <div class="footer-content">
+      <div class="footer-text">
         <a class="logo-footer link" href="./portfolio.html"
           ><span class="web">WEB</span>STUDIO</a
         >
@@ -330,8 +347,8 @@
           digital marketing & growth solutions.
         </p>
       </div>
-
-      <div class="footer-link container">
+      
+      <div class="footer-link">
       <h2 class="media">Social media</h2>
       <ul class="fot-list list">
         <li class="fot-item">
@@ -364,7 +381,7 @@
         </li>
       </ul>
     </div>
-       
+  </div>
     </footer>
   </body>
 </html>
