--- a/portfolio.html
+++ b/portfolio.html
@@ -57,19 +57,19 @@
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
           <ul class="filtr-btn list">
-            <li>
+            <li class="filtr-btn-items">
               <button class="button-item" type="button">All</button>
             </li>
-            <li>
+            <li class="filtr-btn-items">
               <button class="button-item" type="button">Web side</button>
             </li>
-            <li>
+            <li class="filtr-btn-items">
               <button class="button-item" type="button">App</button>
             </li>
-            <li>
+            <li class="filtr-btn-items">
               <button class="button-item" type="button">Design</button>
             </li>
-            <li>
+            <li class="filtr-btn-items">
               <button class="button-item" type="button">Marketing</button>
             </li>
           </ul>
@@ -163,15 +163,54 @@
     </main>
 
     <footer class="footer">
-      <div class="footer-text container">
-        <a class="logo-footer link" href="./portfolio.html"
-          ><span class="web">WEB</span>STUDIO</a
-        >
-        <p class="footer-title">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer-content">
+        <div class="footer-text">
+          <a class="logo-footer link" href="./portfolio.html"
+            ><span class="web">WEB</span>STUDIO</a
+          >
+          <p class="footer-title">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        
+        <div class="footer-link">
+        <h2 class="media">Social media</h2>
+        <ul class="fot-list list">
+          <li class="fot-item">
+            <a href="" class="fot-link link"
+              ><svg class="fot-icon" width="24px" height="24px">
+                <use href="./img/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="fot-item">
+            <a href="" class="fot-link link"
+              ><svg class="fot-icon" width="24px" height="24px">
+                <use href="./img/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="fot-item">
+            <a href="" class="fot-link link"
+              ><svg class="fot-icon" width="24px" height="24px">
+                <use href="./img/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="fot-item">
+            <a href="" class="fot-link link"
+              ><svg class="fot-icon" width="24px" height="24px">
+                <use href="./img/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
-    </footer>
+    </div>
+      </footer>
+  </body>
+</html>
+
   </body>
 </html>
