--- a/index.html
+++ b/index.html
@@ -70,24 +70,13 @@
       <section class="about">
         <div class="container">
           <h2 class="visually-hidden">Ours skills</h2>
-          <div class="skills-icons">
-            <lu class="skills-list list">
-              <li class="skills-item"><a href="" class="skills-link link"><svg class="ours-icon" width="60px" hight="63px">
-              <use href="./img/icons.svg#icon-antenna"></use>
-              </svg></a></li>
-              <li class="skills-item"><a href="" class="skills-link link"><svg class="ours-icon" width="60px" hight="63px">
-                <use href="./img/icons.svg#icon-clock"></use>
-                </svg></a></li>
-                <li class="skills-item"><a href="" class="skills-link link"><svg class="ours-icon" width="60px" hight="63px">
-                  <use href="./img/icons.svg#icon-diagram"></use>
-                  </svg></a></li>
-                  <li class="skills-item"><a href="" class="skills-link link"><svg class="ours-icon" width="60px" hight="63px">
-                    <use href="./img/icons.svg#icon-astronaut"></use>
-                    </svg></a></li>
-            </lu>
-          </div>
           <ul class="about-list list">
             <li class="about-item">
+              <div class="skills-icons"class="skills-icons">
+                <svg class="ours-icon" width="60px" hight="63px">
+                  <use href="./img/icons.svg#icon-antenna"></use>
+                  </svg>
+              </div>
               <h3 class="about-title">Strategy</h3>
               <p class="about-text">
                 Our goal is to identify the business problem to walk away with
@@ -95,6 +84,11 @@
               </p>
             </li>
             <li class="about-item">
+              <div  class="skills-icons">
+                <svg class="ours-icon" width="60px" hight="63px">
+                  <use href="./img/icons.svg#icon-clock"></use>
+                  </svg>
+              </div  class="skills-item"> 
               <h3 class="about-title">Punctuality</h3>
               <p class="about-text">
                 Bring the key message to the brand's audience for the best price
@@ -102,6 +96,11 @@
               </p>
             </li>
             <li class="about-item">
+              <div  class="skills-icons">
+                <svg class="ours-icon" width="60px" hight="63px">
+                  <use href="./img/icons.svg#icon-diagram"></use>
+                  </svg>
+              </div>
               <h3 class="about-title">Diligence</h3>
               <p class="about-text">
                 Research and confirm brands that present the strongest digital
@@ -109,6 +108,11 @@
               </p>
             </li>
             <li class="about-item">
+              <div  class="skills-icons">
+                <svg class="ours-icon" width="60px" hight="63px">
+                  <use href="./img/icons.svg#icon-astronaut"></use>
+                  </svg>
+              </div>
               <h3 class="about-title">Technologies</h3>
               <p class="about-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -310,9 +314,9 @@
       </div>
     </section>
     <!--section 5 under-->
-    <section class="client-containet">
-      <div class="client-pictures">
-        <h1 class="client-title">Costumers</h1>
+    <section class="client-section container">
+      <div class="client-pictures container">
+        <h2 class="client-title">Costumers</h2>
         <ul class="client-list">
           <li class="client-items"><a href="" class="client-link link"><svg class="client-icon" width="104px" height="56px">
             <use href="./img/icons.svg#icon-iconsix"></use>
@@ -336,8 +340,8 @@
       </div>
     </section>
 
-    <footer class="footer">
-    <div class="footer-content">
+    <footer class="footer ">
+    <div class="footer-content container">
       <div class="footer-text">
         <a class="logo-footer link" href="./portfolio.html"
           ><span class="web">WEB</span>STUDIO</a
@@ -349,7 +353,7 @@
       </div>
       
       <div class="footer-link">
-      <h2 class="media">Social media</h2>
+      <p class="media">Social media</p>
       <ul class="fot-list list">
         <li class="fot-item">
           <a href="" class="fot-link link"
