--- a/portfolio.html
+++ b/portfolio.html
@@ -162,8 +162,8 @@
       </section>
     </main>
 
-    <footer class="footer">
-      <div class="footer-content">
+    <footer class="footer ">
+      <div class="footer-content container">
         <div class="footer-text">
           <a class="logo-footer link" href="./portfolio.html"
             ><span class="web">WEB</span>STUDIO</a
@@ -175,7 +175,7 @@
         </div>
         
         <div class="footer-link">
-        <h2 class="media">Social media</h2>
+        <p class="media">Social media</p>
         <ul class="fot-list list">
           <li class="fot-item">
             <a href="" class="fot-link link"
