--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
       </div>
     </section>
     <!--section 5 under-->
-    <section class="client-section container">
-      <div class="client-pictures container">
+    <section class="client-section">
+      <div class="container">
         <h2 class="client-title">Costumers</h2>
         <ul class="client-list">
           <li class="client-items"><a href="" class="client-link link"><svg class="client-icon" width="104px" height="56px">
